hphp/test/slow/disallow_varenv_dyncalls-fatal.php.expectf
Running test_compact_dyncall() #1....

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) compact should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 14
Running test_compact_dyncall() #2....

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) compact should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 14
Running test_compact_cuf() #1....

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) compact should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 21
Running test_compact_cuf() #2....

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) compact should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 21
Running test_compact_cuf_array() #1....

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) compact should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 28
Running test_compact_cuf_array() #2....

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) compact should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 28
Running test_compact_map() #1....

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) compact should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 35
Running test_compact_map() #2....

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) compact should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 35
Running test_compact_walk() #1....

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) compact should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 43
Running test_compact_walk() #2....

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) compact should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 43
Running test_compact_errors() #1....

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) compact should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 48
Running test_compact_errors() #2....

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) compact should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 48
Running test_extract_dyncall() #1....
int(100)
int(200)

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) extract should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 59
Running test_extract_dyncall() #2....
int(100)
int(200)

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) extract should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 59
Running test_extract_cuf() #1....
int(100)
int(200)

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) extract should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 69
Running test_extract_cuf() #2....
int(100)
int(200)

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) extract should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 69
Running test_extract_cuf_array() #1....
int(100)
int(200)

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) extract should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 79
Running test_extract_cuf_array() #2....
int(100)
int(200)

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) extract should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 79
Running test_extract_map() #1....
int(100)
int(200)

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) extract should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 89
Running test_extract_map() #2....
int(100)
int(200)

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) extract should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 89
Running test_extract_walk() #1....
int(100)
int(200)

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) extract should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 100
Running test_extract_walk() #2....
int(100)
int(200)

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) extract should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 100
Running test_extract_errors() #1....

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) extract should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 106
Running test_extract_errors() #2....

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) extract should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 106
Running test_parse_str_dyncall() #1....
int(100)
int(200)

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) parse_str should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 124
Running test_parse_str_dyncall() #2....
int(100)
int(200)

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) parse_str should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 124
Running test_parse_str_cuf() #1....
int(100)
int(200)

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) parse_str should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 134
Running test_parse_str_cuf() #2....
int(100)
int(200)

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) parse_str should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 134
Running test_parse_str_cuf_array() #1....
int(100)
int(200)

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) parse_str should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 144
Running test_parse_str_cuf_array() #2....
int(100)
int(200)

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) parse_str should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 144
Running test_parse_str_map() #1....
int(100)
int(200)

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) parse_str should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 154
Running test_parse_str_map() #2....
int(100)
int(200)

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) parse_str should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 154
Running test_parse_str_walk() #1....
int(100)
int(200)

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) parse_str should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 165
Running test_parse_str_walk() #2....
int(100)
int(200)

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) parse_str should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 165
Running test_parse_str_errors() #1....

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) parse_str should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 171
Running test_parse_str_errors() #2....

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) parse_str should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 171
Running test_framemeta_dyncall() #1....
int(100)

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) HH\set_frame_metadata should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 181
Running test_framemeta_dyncall() #2....
int(100)

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) HH\set_frame_metadata should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 181
Running test_framemeta_cuf() #1....
int(100)

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) HH\set_frame_metadata should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 190
Running test_framemeta_cuf() #2....
int(100)

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) HH\set_frame_metadata should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 190
Running test_framemeta_cuf_array() #1....
int(100)

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) HH\set_frame_metadata should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 199
Running test_framemeta_cuf_array() #2....
int(100)

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) HH\set_frame_metadata should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 199
Running test_framemeta_map() #1....
int(100)

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) HH\set_frame_metadata should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 208
Running test_framemeta_map() #2....
int(100)

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) HH\set_frame_metadata should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 208
Running test_framemeta_errors() #1....

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) HH\set_frame_metadata should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 214
Running test_framemeta_errors() #2....

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) HH\set_frame_metadata should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 214
Running test_getargs_dyncall() #1....

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) func_get_args should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 222
Running test_getargs_dyncall() #2....

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) func_get_args should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 222
Running test_getargs_cuf() #1....

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) func_get_args should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 230
Running test_getargs_cuf() #2....

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) func_get_args should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 230
Running test_getargs_cuf_array() #1....

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) func_get_args should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 238
Running test_getargs_cuf_array() #2....

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) func_get_args should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 238
Running test_getargs_errors() #1....

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) func_get_args should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 254
Running test_getargs_errors() #2....

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) func_get_args should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 254
Running test_assert_dyncall_pass() #1....
int(100)

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) assert should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 263
Running test_assert_dyncall_pass() #2....
int(100)

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) assert should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 263
Running test_assert_dyncall_pass2() #1....

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) assert should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 269
Running test_assert_dyncall_pass2() #2....

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) assert should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 269
Running test_assert_dyncall_fail() #1....
int(100)

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) assert should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 276
Running test_assert_dyncall_fail() #2....
int(100)

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) assert should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 276
Running test_assert_dyncall_fail2() #1....

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) assert should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 282
Running test_assert_dyncall_fail2() #2....

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) assert should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 282
Running test_assert_cuf_pass() #1....
int(100)

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) assert should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 289
Running test_assert_cuf_pass() #2....
int(100)

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) assert should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 289
Running test_assert_cuf_pass2() #1....

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) assert should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 295
Running test_assert_cuf_pass2() #2....

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) assert should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 295
Running test_assert_cuf_fail() #1....
int(100)

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) assert should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 302
Running test_assert_cuf_fail() #2....
int(100)

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) assert should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 302
Running test_assert_cuf_fail2() #1....

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) assert should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 308
Running test_assert_cuf_fail2() #2....

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) assert should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 308
Running test_assert_cuf_array_pass() #1....
int(100)

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) assert should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 315
Running test_assert_cuf_array_pass() #2....
int(100)

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) assert should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 315
Running test_assert_cuf_array_pass2() #1....

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) assert should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 321
Running test_assert_cuf_array_pass2() #2....

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) assert should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 321
Running test_assert_cuf_array_fail() #1....
int(100)

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) assert should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 328
Running test_assert_cuf_array_fail() #2....
int(100)

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) assert should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 328
Running test_assert_cuf_array_fail2() #1....

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) assert should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 334
Running test_assert_cuf_array_fail2() #2....

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) assert should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 334
Running test_assert_map_pass() #1....
int(100)
int(200)

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) assert should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 342
Running test_assert_map_pass() #2....
int(100)
int(200)

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) assert should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 342
Running test_assert_map_pass2() #1....

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) assert should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 348
Running test_assert_map_pass2() #2....

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) assert should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 348
Running test_assert_map_fail() #1....
int(100)
int(200)

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) assert should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 356
Running test_assert_map_fail() #2....
int(100)
int(200)

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) assert should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 356
Running test_assert_map_fail2() #1....

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) assert should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 362
Running test_assert_map_fail2() #2....

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) assert should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 362
Running test_assert_walk_pass() #1....
int(100)
int(200)

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) assert should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 371
Running test_assert_walk_pass() #2....
int(100)
int(200)

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) assert should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 371
Running test_assert_walk_pass2() #1....

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) assert should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 378
Running test_assert_walk_pass2() #2....

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) assert should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 378
Running test_assert_walk_fail() #1....
int(100)
int(200)

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) assert should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 387
Running test_assert_walk_fail() #2....
int(100)
int(200)

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) assert should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 387
Running test_assert_walk_fail2() #1....

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) assert should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 394
Running test_assert_walk_fail2() #2....

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) assert should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 394
Running test_assert_chained() #1....
int(100)
int(200)

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) assert should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 402
Running test_assert_chained() #2....
int(100)
int(200)

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) assert should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 402
Running test_assert_errors() #1....

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) assert should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 408
Running test_assert_errors() #2....

Fatal error: (hhvm.hack.disallow_dynamic_var_env_funcs=error) assert should not be called dynamically in %s/disallow_varenv_dyncalls.inc on line 408
